@@ -233,8 +233,12 @@ static void spl_filesystem_dir_open(spl_filesystem_object* intern, char *path TS
 	intern->u.dir.index = 0;
 
 	if (EG(exception) || intern->u.dir.dirp == NULL) {
-		/* throw exception: should've been already happened */
 		intern->u.dir.entry.d_name[0] = '\0';
+		if (!EG(exception)) {
+			/* open failed w/out notice (turned to exception due to EH_THROW) */
+			zend_throw_exception_ex(spl_ce_UnexpectedValueException, 0
+				TSRMLS_CC, "Failed to open directory \"%s\"", path);
+		}
 	} else {
 		do {
 			spl_filesystem_dir_read(intern TSRMLS_CC);
