@@ -30,6 +30,10 @@ PHP                                                                        NEWS
 - Sockets extension:
   . Fixed bug #51958 (socket_accept() fails on IPv6 server sockets). (Gustavo)
 
+- SPL extension:
+  . Fixed bug #54291 (Crash iterating DirectoryIterator for dir name starting
+    with \0). (Gustavo)
+
 17 Mar 2011, PHP 5.3.6
 - Upgraded bundled Sqlite3 to version 3.7.4. (Ilia)
 - Upgraded bundled PCRE to version 8.11. (Ilia)
